# quantlab-event-scanner

./: .gitignore  README.md  STATE_V2_CONSUMER.md  databricks.yml  pyproject.toml
configs/: dev.yaml  prod.yaml
docs/: .phase2j_performance_audit.md.swp  compute_policy_2026-04-29.md  data_universe_2026-04-29.md  phase1_event_map_scan.md  phase2h_top_diff_content_review.md  phase2j_multi_normal_window_spec.md  phase2j_p0_performance_patch_plan.md  phase2j_p0_performance_patch_result.md  phase2j_p1_partition_extraction_patch_plan.md  phase2j_p1_partition_extraction_patch_result.md  phase2j_performance_audit.md  phase2k_multi_normal_top_diff_content_review.md  phase3b_btc_multi_event_content_review_plan.md  project_capability_audit_2026-04-29.md  roadmap.md
jobs/: 01_detect_events.py  02_profile_trade_data.py  03_scan_trade_move_candidates.py  04_write_trial_event_map.py  05_extract_pre_event_windows_trial.py  06_extract_pre_event_bbo_windows_trial.py  07_build_pre_event_market_snapshots_trial.py  08_profile_pre_event_market_snapshots_trial.py  09_build_normal_time_trial.py  10_compare_event_vs_normal_profiles_trial.py  11_inspect_profile_comparison_top_diffs_trial.py  12_build_multi_normal_trial.py  13_build_btc_multi_event_trial.py  14_probe_btc_event_coverage.py  15_finalize_btc_multi_event_trial.py  16_review_btc_multi_event_content.py
scripts/: check_databricks_cli.sh  validate_bundle.sh
tests/: test_btc_event_coverage_probe.py  test_btc_multi_event_trial.py  test_config.py  test_event_candidates.py  test_manifest.py  test_multi_normal_trial.py  test_paths.py  (+10 more)
(+26 files in other folders)
